--- a/pages/about_BOT.html
+++ b/pages/about_BOT.html
@@ -44,16 +44,18 @@
 <section id="main_sect">
   <div class="container text-center">
     <h1>About BOT</h1>
-    <p>We are pretty much sure that soon we all will digitalize ourselves. In this making, we have to introduce a fresh gaming experience to change the concept of virtual gaming into real time. And in this way you will achieve something real in your hand. <br>
+    <div class="main-div">
+      <p>We are pretty much sure that soon we all will digitalize ourselves. In this making, we have to introduce a fresh gaming experience to change the concept of virtual gaming into real time. And in this way you will achieve something real in your hand. <br>
       <br>The system will include these following modules:</p>
       <ul>
-        <li><span>Login Information:</span> You can login with their name (username), email, cell number and password. You can also login with your Facebook account.</li>
+        <li><span>Login Information:</span> You can login with your name (username), email, cell number and password. You can also login with your Facebook account.</li>
         <li><span>Access:</span> The system will fetch the information about location and notification access.</li>
         <li><span>Destination:</span> You will receive auto-generated time by entering your destionation.</li>
         <li><span>Arrival:</span> After successful arrival on your destions, you will receive some BOT points.</li>
         <li><span>BOT Points:</span> These points can be redeemed on different platforms provided by BOT collabed companies.</li>
         <li><span>Unsuccessful Arrival:</span> If you arrived before or after the time provided by BOT, you will receive the notification of try again.</li>
       </ul>
+    </div>
 
       <button class="btn" onclick="appalert()">Get Our Android/IOS App</button>
   </div>
