--- a/index.html
+++ b/index.html
@@ -44,7 +44,20 @@
   <div class="container text-center">
     <h1>Be On Time</h1>
     <img src="images/logo.png">
-    <p>A real time gaming experience in which you will be amazed and earn at the same time.</p>
+  </div>
+  <!-- Ticker -->
+    <div class="ticker-container">
+      <div class="ticker-wrap">
+        <div class="ticker">
+          <div class="ticker__item"><p>A real time gaming experience in which you will be amazed and earn at the same time</p></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container text-center">
+    <div class="map">
+        <div id="googleMap" style="width:100%;height:400px;"></div>
+    </div>
     <button class="btn" onclick="appalert()">Get Our Android/IOS App</button>
   </div>
 </section>
@@ -56,6 +69,16 @@
   </div>
 </footer>
 
+<script>
+function myMap() {
+var mapProp= {
+  center:new google.maps.LatLng(33.724474,72.819315),
+  zoom:15,
+};
+var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+}
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxz4TFoJIqfXE_Ate_CM_cm2dHS00hvow&callback=myMap"></script>
 
 <script type="text/javascript">
   function hidemenu(){
